--- a/css/product.css
+++ b/css/product.css
@@ -54,10 +54,10 @@
 .product_view{padding-top:3vw; background-color:#f6f6f6}
 
 
-.tab{display:flex; background-color:#fff; }
+.tab{display:flex;background-color:#fff;}
 .tab.fix{position:fixed; top:0; left:0; width:100%; z-index:10}
-.tab a{width:25%; height:12vw; line-height:12vw; text-align:center; font-size:3.8vw; border-bottom:0.3vw solid #e8e8ed}
-.tab a.on{border-bottom:0.9vw solid #ee2d2c; color:#ee2d2c; font-weight:bold}
+.tab a{height:12vw;line-height:12vw;text-align:center;font-size:3.8vw;border-bottom:0.3vw solid #e8e8ed;flex: 1 0 auto;}
+.tab a.on{border-bottom:0.9vw solid #ee2d2c;color:#ee2d2c;font-weight:bold}
 .tab.x3 a{width:33.3%;}
 
 
@@ -151,11 +151,11 @@
 
 
 .tab4{background-color:#fff; padding:13vw 0;}
-.tab4 .like{position:relative; padding:8vw 7vw; border:1px solid #E4E4E4; border-radius:3vw; margin-top:13vw;}
-.tab4 .like h5{font-size:5vw; margin-bottom:3vw}
-.tab4 .like h5 i{margin-left:4vw; font-size:5vw; color:#b2b0af}
-.tab4 .like p{color:#7C7B7A; font-size:3.8vw}
-.tab4 .like a{position:absolute; top:0; left:0; width:100%; height:100%;}
+ .like{position:relative; padding:8vw 7vw; border:1px solid #E4E4E4; border-radius:3vw; margin-top:13vw;}
+ .like h5{font-size:5vw; margin-bottom:3vw}
+ .like h5 i{margin-left:4vw; font-size:5vw; color:#b2b0af}
+ .like p{color:#7C7B7A; font-size:3.8vw}
+ .like a{position:absolute; top:0; left:0; width:100%; height:100%;}
 
 
 
