--- a/css/sub.css
+++ b/css/sub.css
@@ -6,6 +6,9 @@
 .header .h_btn a{position: relative;width: 4.8vw; }
 .header .h_btn a img{filter: invert(100%) sepia(0%) saturate(7486%) hue-rotate(269deg) brightness(97%) contrast(103%);}
 .header .h_btn span{position:absolute;right: -2vw;bottom: -1vw;width:4vw;height:4vw;background-color:#f8992c;color:#fff;text-align: center;line-height: 4vw;border-radius: 50%;font-size: 3vw;font-weight: bold; }
+.header .h_btn .bell,.header .h_btn .setting{width:6.6vw}
+.header .h_btn .bell{margin-right:4vw;}
+
 .header h1{width:28.5vw;filter: invert(100%) sepia(0%) saturate(7486%) hue-rotate(269deg) brightness(97%) contrast(103%);}
 
 .header .search{position:absolute;top:0;left:0;width:100%;height: 100%;background-color: #fff;display: none;}
